feat: add PatchSubscription endpoint
